--- a/css/account.css
+++ b/css/account.css
@@ -938,7 +938,7 @@ div {
   position: absolute;
   top: 28px;
   left: 120px;
-  color: #ed5565;
+  color: #999999;
   font-size: 12px;
 }
 .list-sty04 > h4 {
@@ -976,18 +976,16 @@ div {
 }
 .list-sty05 > h3 {
   position: relative;
-  padding-left: 55px;
+  padding-left: 34px;
   height: 30px;
   line-height: 30px;
   color: #333333;
   font-size: 14px;
 }
-.list-sty05 > h3 > img {
+.list-sty05 > h3 > i {
   position: absolute;
-  top: 6px;
+  top: 5px;
   left: 10px;
-  width: 38px;
-  height: 18px;
 }
 .list-sty05 > p {
   padding-right: 10px;
@@ -1023,7 +1021,7 @@ div {
   border: 1px solid #48cfad;
   border-radius: 4px;
 }
-.list-sty05 > h4 > a.cancel-order {
+.list-sty05 > h4 > a.native {
   right: 100px;
   color: #999999;
   border-color: #e0e0e0;
@@ -1276,9 +1274,46 @@ div {
   margin-left: 0;
 }
 .footer-sty05 {
-  color: #fff;
-  font-size: 14px;
+  position: absolute;
+  width: 100%;
+  height: 50px;
+  background-color: #fff;
+}
+.footer-sty05 > div {
+  line-height: 50px;
+  font-size: 12px;
+  padding-left: 10px;
+}
+.footer-sty05 > div > i {
+  display: inline-block;
+  margin-right: 4px;
+  width: 14px;
+  height: 14px;
+  position: relative;
+  top: 2px;
+  margin-right: 0;
+  background: url(../img/icon-choose-on.png) no-repeat center;
+  background-size: contain;
+}
+.footer-sty05 > div.off > i {
+  display: inline-block;
+  margin-right: 4px;
+  width: 14px;
+  height: 14px;
+  position: relative;
+  top: 2px;
+  margin-right: 0;
+  background: url(../img/icon-choose-off.png) no-repeat center;
+  background-size: contain;
+}
+.footer-sty05 > a {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 120px;
   text-align: center;
+  font-size: 14px;
+  color: #fff;
   background-color: #ed5565;
 }
 .footer-sty06 {
@@ -1287,6 +1322,7 @@ div {
 }
 .footer-sty06 > ul {
   position: relative;
+  display: none;
 }
 .footer-sty06 > ul > li {
   position: relative;
@@ -1302,9 +1338,15 @@ div {
   border: 1px solid #48cfad;
   border-radius: 4px;
 }
+.footer-sty06 > ul > li > a {
+  color: #48cfad;
+}
 .footer-sty06 > ul > li.disabled {
   color: #999999;
   border-color: #e0e0e0;
+}
+.footer-sty06 > ul > li.disabled > a {
+  color: #999999;
 }
 body {
   background: #f1f1f1;
