--- a/less/modules/list.less
+++ b/less/modules/list.less
@@ -76,7 +76,8 @@
 	> h3 { position: absolute; top: 5px; left: 120px; width: calc(~"100% - 130px"); height: 26px; line-height: 26px; .ellipsis;
 	    > a { display: block; width: 100%; height: 100%; color: @font-darker-color; font-size: 14px; font-weight: bold; }
 	}
-	> h5 { position: absolute; top: 28px; left: 120px; color: @base-color-red; font-size: 12px; }
+	// > h5 { position: absolute; top: 28px; left: 120px; color: @base-color-red; font-size: 12px; }
+	> h5 { position: absolute; top: 28px; left: 120px; color: @font-lighter-color; font-size: 12px; }
 	> h4 { position: absolute; top: 48px; left: 120px; height: 14px; line-height: 14px; color: @base-color-red; font-size: 16px;
 		> i { font-size: 12px; }
 	}
@@ -89,8 +90,9 @@
 
 // 待收货页面
 .list-sty05 { margin-bottom: 1px; background-color: #fff;
-	> h3 { position: relative; padding-left: 55px; height: 30px; line-height: 30px; color: @font-darker-color; font-size: 14px;
-		> img { position: absolute; top: 6px; left: 10px; width: 38px; height: 18px; }
+	> h3 { position: relative; padding-left: 34px; height: 30px; line-height: 30px; color: @font-darker-color; font-size: 14px;
+		// > img { position: absolute; top: 6px; left: 10px; width: 38px; height: 18px; }
+		> i { position: absolute; top: 5px; left: 10px; }
 	}
 	> p { padding-right: 10px; height: 30px; line-height: 30px; font-size: 14px; text-align: right; border-bottom: 1px solid @border-color;
 		> em { margin: 0 4px; color: @base-color-red; font-size: 12px;
@@ -99,7 +101,7 @@
 	}
 	> h4 { position: relative; height: 40px;
 		> a { position: absolute; top: 7px; right: 10px; width: 80px; height: 26px; line-height: 26px; color: @base-color; font-size: 12px; text-align: center; border: 1px solid @base-color; border-radius: 4px;
-	        &.cancel-order { right: 100px; color: @font-lighter-color; border-color: #e0e0e0; }
+	        &.native { right: 100px; color: @font-lighter-color; border-color: #e0e0e0; }
 		}
 	}
 }
