--- a/less/pages.less
+++ b/less/pages.less
@@ -49,7 +49,7 @@ body { background: @body-bg; }
 .product-details {
 	> div { margin-bottom: 4px; }
 	.title { padding-left: 4px; height: 30px; line-height: 30px; color: @base-color; font-size: 16px; border-bottom: 2px solid @base-color;}
-	.p01 { position: relative; height: 90px; background-color: #fff;
+	.p01 { position: relative; height: 106px; background-color: #fff;
 		> h3 { position: absolute; top: 10px; left: 10px; width: calc(~"100% - 10px"); height: 20px; line-height: 20px;
 			> span { display: inline-block; overflow: hidden; width: calc(~"100% - 68px"); font-size: 14px; color: @font-darker-color; }
 		    > em { position: absolute; right: 10px; margin: 0;}
@@ -59,6 +59,7 @@ body { background: @body-bg; }
 		}
 		> p { position: absolute; top: 56px; left: 38px; width: calc(~"100% - 48px"); height: 12px; line-height: 12px; font-size: 12px; color: @font-lighter-color;
 			&:nth-child(4) { top: 72px; }
+			&:nth-child(5) { top: 88px; }
 			> span { float: left;
 				&:nth-child(2) { float: right; }
 				> b { font-weight: normal; text-decoration: line-through; }
@@ -206,8 +207,37 @@ body { background: @body-bg; }
 }
 
 .order-comment {
-	.p01 { margin-top: 5px;
-		.list-sty04 { background-color: #fff; }
+	.p01 { background-color: #fff;
+		.l01 { position: relative; height: 75px; padding: 10px;
+			> img { position: absolute; top: 10px; left: 10px; width: 50px; height: 50px; }
+			> textarea { position: absolute; top: 10px; left: 70px; width: calc(~"100% - 80px"); height: 75px; resize: none; font-size: 12px; }
+		}
+		.comment-level { height: 46px; line-height: 46px; color: @font-lighter-color; font-size: 14px; border-top: 1px solid @border-color;
+			> li { float: left; width: 33.3%; text-align: center;
+				> i { padding: 0 10px; font-size: 20px; color: @font-lighter-color; }
+				&.good {
+					> i { background: url(../img/icon-comment01.png) no-repeat center; background-size: contain; }
+					&.active {
+						> i { background: url(../img/icon-comment-good.png) no-repeat center; background-size: contain; }
+						> span { color: @base-color; }
+					}
+				}
+				&.common {
+					> i { background: url(../img/icon-comment01.png) no-repeat center; background-size: contain; }
+					&.active {
+						> i { background: url(../img/icon-comment-common.png) no-repeat center; background-size: contain; }
+						> span { color: #fdac00; }
+					}
+				}
+				&.bad {
+					> i { background: url(../img/icon-comment02.png) no-repeat center; background-size: contain; }
+					&.active {
+						> i { background: url(../img/icon-comment-bad.png) no-repeat center; background-size: contain; }
+						> span { color: @font-color; }
+					}
+				}
+			}
+		}
 	}
 	.p02 { margin: 5px 0;
 		> div { position: relative; padding-left: 10px; height: 34px; line-height: 34px; font-size: 14px; border-bottom: 1px solid @border-color; background-color: #fff;
@@ -223,7 +253,7 @@ body { background: @body-bg; }
 
 .account-index { margin-top: 5px; font-size: 12px;
 	.title { padding: 10px; height: 24px; line-height: 24px; color: @font-darker-color; font-size: 14px; }
-	.line { position: relative; height: 34px; line-height: 34px; border-bottom: 1px solid @border-color; background-color: #fff;
+	.line { position: relative; line-height: 34px; border-bottom: 1px solid @border-color; background-color: #fff;
 		&:last-child { border: none; }
 		> em { display: inline-block; box-sizing: border-box; width: 50px; color: @font-lighter-color;
 			&.address { padding-left: 10px; background: url(../img/icon-address-02.png) no-repeat left center; background-size: 8px 12px; }
@@ -234,6 +264,11 @@ body { background: @body-bg; }
 	    > input { display: inline-block; width: calc(~"100% - 90px"); }
 	    > i { .icon-account-editor;
 	    	&.active { .icon-account-save; }
+	    }
+	    .verification { position: relative; display: none; margin-left: 50px; margin-right: 10px; border-top: 1px solid @border-color;
+	    	> a { position: absolute; top: 4px; right: 0; width: 120px; height: 26px; line-height: 26px; text-align: center; color: #fff; border-radius: 2px; background-color: #ccc;
+	    		&.active { padding: 0 10px; width: auto; background-color: @base-color; }
+	    	}
 	    }
 	}
 	.p01, .p02 { padding-left: 10px; background-color: #fff; }
@@ -314,5 +349,36 @@ body { background: @body-bg; }
     }
 }
 
+.logistics-details {
+	.p01 { position: relative; padding: 10px; background-color: #fff;
+		> img { width: 56px; height: 56px; }
+		> ul { height: 56px; line-height: 14px;
+			> li { .clearfix; font-size: 12px;
+				> em { float: left; width: 60px; }
+				> span { float: left; }
+				&:first-child {
+					> em { color: #111; }
+					> span { color: @base-color; }
+				}
+			}
+
+		}
+	}
+	.p02 { position: relative; margin-top: 10px; background-color: #fff;
+		> ul {
+			> li { position: relative;
+				> .left { position: absolute; top: 0; left: 24px; bottom: 0; width: 2px; background-color: @border-color; }
+				> .point { position: absolute; top: 14px; left: 21px; width: 8px; height: 8px; border-radius: 4px; background-color: @border-color; }
+				> .right { margin-left: 50px; padding: 10px 0; line-height: 16px; color: #999; font-size: 12px; border-top: 1px solid @border-color;
+					.l01 { margin-bottom: 10px; }
+				}
+				&:first-child { border: none;
+					.point { top: 12px; left: 19px; width: 12px; height: 12px; border-radius: 6px; background-color: @base-color; }
+					.right { color: @base-color; border: none; }
+				}
+			}
+		}
+	}
+}
 
 
