--- a/less/modules/footer.less
+++ b/less/modules/footer.less
@@ -93,3 +93,6 @@
     }
 }
 
+.footer-sty07 { background-color: #fff;
+    > a { display: block; line-height: 50px; text-align: center; font-size: 14px; color: #666; }
+}
