--- a/less/modules/header.less
+++ b/less/modules/header.less
@@ -1,8 +1,10 @@
 // header -----------------------------------------------------------------------------
 .header { position: relative; width: 100%; height: 50px; line-break: 50px; background-color: #fff; border-bottom: 1px solid @border-color;
-   > a { position: absolute; top: 10px; left: 0; width: 42px; height: 30px; border-right: 1px solid @border-color; background: url(../img/icon-back.png) no-repeat center; background-size: 50%;
+    > a { position: absolute; top: 10px; left: 0; width: 42px; height: 30px; border-right: 1px solid @border-color; background: url(../img/icon-back.png) no-repeat center; background-size: 50%;
        &.icon-index { background: url(../img/icon-index.png) no-repeat center; background-size: 50%; }
-   }
-   > h3 { position: absolute; top: 0; left: 54px; line-height: 50px; color: @font-darker-color; font-size: 18px; }
-   > span { position: absolute; top: 0; right: 10px; line-height: 50px; color: @base-color; font-size: 12px; }
+    }
+    > h3 { position: absolute; top: 0; left: 54px; line-height: 50px; color: @font-darker-color; font-size: 18px;
+    	> span { margin-left: 8px; font-size: 14px; color: @font-lighter-color; }
+    }
+    > span { position: absolute; top: 0; right: 10px; line-height: 50px; color: @base-color; font-size: 12px; }
 }
