--- a/less/modules/list.less
+++ b/less/modules/list.less
@@ -106,6 +106,44 @@
 	}
 }
 
+// 商户订单页面
+.list-sty06 { margin-top: 4px; padding-left: 10px; background-color: #fff;
+	> div { padding-right: 10px; border-top: 1px solid @border-color; }
+	.l01, .l02 { padding: 10px 10px 10px 0; font-size: 14px;
+		> p { height: 14px; line-height: 16px;
+			&:nth-child(1), &:nth-child(2) { margin-bottom: 6px; }
+		}
+	}
+	.l01 { color: @font-lighter-color; border: none;
+		> p {
+			> span { float: right; }
+		}
+	}
+	.l02 { color: @font-darker-color;
+		> p {
+			> span { margin-left: 40px; }
+		}
+	}
+	.l03 { line-height: 30px; font-size: 16px;
+		> span { float: left; display: block; width: 33.3%;
+			> i { color: @base-color; }
+			&:nth-child(2) { text-align: center; }
+			&:nth-child(3) { text-align: right; }
+		}
+	}
+	.l04 { line-height: 30px; font-size: 16px; text-align: right;
+		> i { color: @base-color; }
+	}
+	.l05 { height: 42px; line-height: 42px; color: @font-lighter-color; font-size: 14px; text-align: right;
+		> a { padding: 2px 14px; font-size: 14px; border: 1px solid @base-color; border-radius: 2px;
+			&.a01 { color: @base-color; }
+			&.a02 { background-color: @base-color; color: #fff; }
+			&.a03 { background-color: #fff; color: @font-lighter-color; border-color: @border-color; }
+		}
+		> i { color: @font-color; }
+	}
+}
+
 
 
 
