--- a/less/modules/variables.less
+++ b/less/modules/variables.less
@@ -15,7 +15,9 @@
 
 
 .wrapper { position: relative; margin: 0 auto; width: 100%; height: 100%; max-width: 750px; *padding-top: 0; overflow: hidden; }
-.content { position: relative; height: calc(~"100% - 100px"); overflow-y: scroll; -webkit-overflow-scrolling: touch; }
+.content { position: relative; height: calc(~"100% - 100px"); overflow-y: scroll; -webkit-overflow-scrolling: touch;
+	&.content-sty01 { height: calc(~"100% - 50px"); }
+}
 
 .clearfix { zoom: 1; }
 .clearfix:before { content: ""; display: table; }
