--- a/less/modules/header.less
+++ b/less/modules/header.less
@@ -6,5 +6,7 @@
     > h3 { position: absolute; top: 0; left: 54px; line-height: 50px; color: @font-darker-color; font-size: 18px;
     	> span { margin-left: 8px; font-size: 14px; color: @font-lighter-color; }
     }
-    > span { position: absolute; top: 0; right: 10px; line-height: 50px; color: @base-color; font-size: 12px; }
+    > span { position: absolute; top: 0; right: 10px; line-height: 50px; color: @base-color; font-size: 12px;
+    	> a { color: @base-color; }
+    }
 }
