--- a/less/modules/modals.less
+++ b/less/modules/modals.less
@@ -1,6 +1,6 @@
-.modal { position: absolute; left: 10%; z-index: 2000; box-sizing: border-box; width: 80%; }
+.modal { position: absolute; z-index: 2000; box-sizing: border-box; }
 
-.modal-sty01 { top: 100px; overflow: hidden; border-radius: 2px; background-color: #fff;
+.modal-sty01 { top: 100px; left: 10%; overflow: hidden; width: 80%; border-radius: 2px; background-color: #fff;
 	.modal-content { padding: 20px 10px 0; font-size: 14px;
 		> div { height: 28px; line-height: 28px; margin-bottom: 8px; border: 1px solid @border-color; border-radius: 2px;
 			> input { box-sizing: border-box; padding: 0 8px; width: 100%; height: 26px; font-size: 14px;
@@ -9,8 +9,10 @@
 			> select { box-sizing: border-box; padding: 0 18px 0 8px; width: 100%; height: 100%; border: none; color: #999; background: url('../img/icon-arrow-down.png') no-repeat center right; background-size: 14px 14px; }
 			> a { float: right; margin-left: 8px; width: 28px; }
 		}
+		> textarea { box-sizing: border-box; padding: 8px; width: 100%; height: 200px; border: 1px solid @border-color; border-radius: 2px; resize: none; }
 	}
 	.modal-footer { height: 32px; line-height: 32px; background-color: @base-color;
 		> li { float: left; box-sizing: border-box; width: 50%; color: #fff; font-size: 14px; text-align: center; border-left: 1px solid @border-left-color; border-right: 1px solid @border-right-color; }
 	}
 }
+.modal-sty02 { top: 100px; bottom: 100px; overflow: scroll; -webkit-overflow-scrolling: touch; }
