--- a/Views/Merchant/simpleRecords.html
+++ b/Views/Merchant/simpleRecords.html
@@ -9,7 +9,7 @@
     <meta content="telephone=no" name="format-detection">
     <meta content="email=no" name="format-detection">
     <meta http-equiv="Cache-Control" content="max-age=14400">
-    <title>今日小计</title>
+    <title>小计</title>
     <link rel="stylesheet" href="../../css/vendor.css?v=2017020201" />
     <script src="../../js/jquery-2.2.1.js"></script>
     <script src="../../js/jquery.cookie.js"></script>
@@ -20,7 +20,7 @@
     <div class="wrapper">
         <div class="header">
             <a href="javascript:;" class="btn-back"></a>
-            <h3>今日小计</h3>
+            <h3>小计</h3>
         </div>
         <div class="content content-sty01">
             <div class="simple-record">
