--- a/less/vendor.less
+++ b/less/vendor.less
@@ -91,7 +91,7 @@ body { background: @body-bg; }
 		&:first-child { border-top: none; }
 		> em { float: left; width: 100px; }
 		> span { float: left; width: calc(~"100% - 100px");
-			> input { height: 26px; line-height: 26px; font-size: 14px; border: none; }
+			> input { display: block; width: 100%; height: 34px; line-height: 26px; font-size: 14px; border: none; }
 		}
 	}
 }
