--- a/css/vendor.css
+++ b/css/vendor.css
@@ -1693,7 +1693,9 @@ body {
   width: calc(100% - 100px);
 }
 .vendor-info > div > span > input {
-  height: 26px;
+  display: block;
+  width: 100%;
+  height: 34px;
   line-height: 26px;
   font-size: 14px;
   border: none;
