--- a/less/modules/list.less
+++ b/less/modules/list.less
@@ -43,7 +43,7 @@
 	}
 	.second-line { font-size: 12px;
 		> h4 { line-height: 18px; color: @font-darker-color; }
-		> p { padding-left: 10px; height: 14px; line-height: 14px; color: @font-color;
+		> p { padding-left: 10px; height: 14px; line-height: 14px; color: @font-color; .ellipsis;
 			&:nth-child(3) { margin-top: 2px; }
 			> span { display: inline-block; overflow: hidden; }
 		}
@@ -110,7 +110,7 @@
 .list-sty06 { margin-top: 4px; padding-left: 10px; background-color: #fff;
 	> div { padding-right: 10px; border-top: 1px solid @border-color; }
 	.l01, .l02 { padding: 10px 10px 4px 0; font-size: 14px;
-		> p { height: 14px; line-height: 16px;
+		> p { line-height: 16px;
 			&:nth-child(1), &:nth-child(2) { margin-bottom: 6px; }
 		}
 	}
