修改运费等

--- a/Views/Merchant/orderList.html
+++ b/Views/Merchant/orderList.html
@@ -51,10 +51,16 @@
         <div class="modal modal-sty01" id="changeAmountModal" style="display: none;">
             <div class="modal-content">
                 <div>
-                    <input id="consumDiscount" type="text" placeholder="优惠金额">
+                    <em>优惠金额</em>
+                    <span>
+                        <input id="consumDiscount" type="text" placeholder="请输入优惠金额">
+                    </span>
                 </div>
                 <div>
-                    <input id="expressCharge" type="text" placeholder="运费金额">
+                    <em>运费金额</em>
+                    <span>
+                        <input id="expressCharge" type="text" placeholder="请输入运费金额">
+                    </span>
                 </div>
             </div>
             <ul class="modal-footer clearfix">
@@ -78,7 +84,7 @@
                 </div>
             </div>
             <ul class="modal-footer clearfix">
-                <li class="cancel">取消</li>
+                <li class="cancel">关闭</li>
                 <li class="confirm">确认</li>
             </ul>
         </div>
@@ -87,7 +93,7 @@
                 <textarea id="remark" type="text" placeholder="备注"></textarea>
             </div>
             <ul class="modal-footer clearfix">
-                <li class="cancel">取消</li>
+                <li class="cancel">关闭</li>
                 <li class="confirm">确认</li>
             </ul>
         </div>
