--- a/Views/Order/orderConfirm.html
+++ b/Views/Order/orderConfirm.html
@@ -30,16 +30,15 @@
                         <i class="icon-address-01"></i>
                         <i class="icon-arrow-to"></i>
                         <p>
-                            <span>收货人：<em id="addressName">robin</em></span>
-                            <span>联系方式：<em id="addressPhone">11111111111</em></span>
+                            <span>收货人：<em id="addressName"></em></span>
+                            <span>联系方式：<em id="addressPhone"></em></span>
                         </p>
                         <p id="addressDetails">
-                            收货地址：上海市闸北区沪太支路800号
                         </p>
                     </a>
                 </div>
                 <div class="p02" id="confirmList">
-                    <div>
+                    <!-- <div>
                         <h4></h4>
                         <ul>
                             <li class="list-sty04">
@@ -71,7 +70,7 @@
                                 <span>共<em></em>件商品<em>小计：<i>¥<b>57.00</b></i></em></span>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
