--- a/Views/User/index.html
+++ b/Views/User/index.html
@@ -30,13 +30,13 @@
                         <input type="text" id="userName" readonly="readonly"></input>
                         <i class="editor-user-info" data-status="0"></i>
                     </div>
-                    <div class="line">
+                    <div class="line verify-group">
                         <em>手机</em>
-                        <input type="text" id="cellPhone" readonly="readonly" maxlength="11"></input>
+                        <input class="editor-ipt" type="phone" id="cellPhone" readonly="readonly" maxlength="11"></input>
                         <i class="editor-user-code" data-status="0"></i>
                         <div class="verification">
-                            <input type="text" maxlength="11" placeholder="请输入验证码">
-                            <a class="active" href="javascript:;">获取验证码</a>
+                            <input class="verify-ipt" type="text" maxlength="11" placeholder="请输入验证码">
+                            <a class="verify-btn" href="javascript:;">获取验证码</a>
                         </div>
                     </div>
                     <div class="line">
