--- a/less/pages.less
+++ b/less/pages.less
@@ -258,6 +258,7 @@ body { background: @body-bg; }
 		> em { display: inline-block; box-sizing: border-box; width: 50px; color: @font-lighter-color;
 			&.address { padding-left: 10px; background: url(../img/icon-address-02.png) no-repeat left center; background-size: 8px 12px; }
 		}
+		.address-details { display: inline-block; vertical-align: top; width: calc(~"100% - 60px"); .ellipsis; }
 		// > span { display: inline-block; width: calc(~"100% - 80px"); .ellipsis
 		//     > select { display: inline-block; width: 30%; margin-right: 3.3%; height: 22px; }
 	    // }
