--- a/css/account.css
+++ b/css/account.css
@@ -582,14 +582,25 @@ div {
   border: 1px solid #ececec;
   border-radius: 2px;
 }
-.modal-sty01 .modal-content > div > input {
+.modal-sty01 .modal-content > div > em {
+  display: inline-block;
+  width: 56px;
+  padding-left: 4px;
+  font-size: 14px;
+  color: #999999;
+}
+.modal-sty01 .modal-content > div > span {
+  display: inline-block;
+  width: calc(100% - 70px);
+}
+.modal-sty01 .modal-content > div input {
   box-sizing: border-box;
   padding: 0 8px;
   width: 100%;
   height: 26px;
   font-size: 14px;
 }
-.modal-sty01 .modal-content > div > input.left {
+.modal-sty01 .modal-content > div input.left {
   float: left;
   width: calc(100% - 36px);
 }
