--- a/css/pages.css
+++ b/css/pages.css
@@ -582,14 +582,25 @@ div {
   border: 1px solid #ececec;
   border-radius: 2px;
 }
-.modal-sty01 .modal-content > div > input {
+.modal-sty01 .modal-content > div > em {
+  display: inline-block;
+  width: 56px;
+  padding-left: 4px;
+  font-size: 14px;
+  color: #999999;
+}
+.modal-sty01 .modal-content > div > span {
+  display: inline-block;
+  width: calc(100% - 70px);
+}
+.modal-sty01 .modal-content > div input {
   box-sizing: border-box;
   padding: 0 8px;
   width: 100%;
   height: 26px;
   font-size: 14px;
 }
-.modal-sty01 .modal-content > div > input.left {
+.modal-sty01 .modal-content > div input.left {
   float: left;
   width: calc(100% - 36px);
 }
@@ -2152,6 +2163,14 @@ body {
   padding-left: 10px;
   background: url(../img/icon-address-02.png) no-repeat left center;
   background-size: 8px 12px;
+}
+.account-index .line .address-details {
+  display: inline-block;
+  vertical-align: top;
+  width: calc(100% - 60px);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .account-index .line > input {
   display: inline-block;
