--- a/less/modules/modals.less
+++ b/less/modules/modals.less
@@ -3,7 +3,9 @@
 .modal-sty01 { top: 100px; left: 10%; overflow: hidden; width: 80%; border-radius: 2px; background-color: #fff;
 	.modal-content { padding: 20px 10px 0; font-size: 14px;
 		> div { height: 28px; line-height: 28px; margin-bottom: 8px; border: 1px solid @border-color; border-radius: 2px;
-			> input { box-sizing: border-box; padding: 0 8px; width: 100%; height: 26px; font-size: 14px;
+			> em { display: inline-block; width: 56px; padding-left: 4px; font-size: 14px; color: @font-lighter-color; }
+			> span { display: inline-block; width: calc(~"100% - 70px"); }
+			input { box-sizing: border-box; padding: 0 8px; width: 100%; height: 26px; font-size: 14px;
 				&.left { float: left; width: calc(~"100% - 36px"); }
 			}
 			> select { box-sizing: border-box; padding: 0 18px 0 8px; width: 100%; height: 100%; border: none; color: #999; background: url('../img/icon-arrow-down.png') no-repeat center right; background-size: 14px 14px; }
