--- a/Views/User/index.html
+++ b/Views/User/index.html
@@ -33,7 +33,7 @@
                     <div class="line verify-group">
                         <em>手机</em>
                         <input class="editor-ipt" type="phone" id="cellPhone" readonly="readonly" maxlength="11"></input>
-                        <i class="editor-user-code" data-status="0"></i>
+                        <i class="editor-user-code phone" data-status="0"></i>
                         <div class="verification">
                             <input class="verify-ipt" type="text" maxlength="11" placeholder="请输入验证码">
                             <a class="verify-btn" href="javascript:;">获取验证码</a>
@@ -42,7 +42,7 @@
                     <div class="line">
                         <em>邮箱</em>
                         <input type="text" id="email" readonly="readonly"></input>
-                        <i class="editor-user-code" data-status="0"></i>
+                        <i class="editor-user-info" data-status="0"></i>
                     </div>
                     <!-- <div class="line">
                         <em>性别</em>
