--- a/css/pages.css
+++ b/css/pages.css
@@ -94,10 +94,6 @@ a {
   text-decoration: none;
   color: #666;
 }
-a:hover,
-a:visited {
-  color: #666;
-}
 button,
 input,
 optgroup,
@@ -344,6 +340,17 @@ div {
   100% {
     top: 110%;
   }
+}
+.button-sty01 {
+  display: block;
+  width: 90%;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  color: #fff;
+  font-size: 16px;
+  background-color: #fd8201;
+  border-radius: 2px;
 }
 .icon-superfine {
   display: inline-block;
@@ -2222,6 +2229,14 @@ body {
 .account-index .p02 {
   padding-left: 10px;
   background-color: #fff;
+}
+.account-index .phone-panel .line {
+  padding-left: 10px;
+  background-color: #fff;
+}
+.account-index .phone-panel .button-sty01 {
+  margin-left: 5%;
+  margin-top: 20px;
 }
 .account-index .p02 .line:last-child {
   text-align: center;
