--- a/less/pages.less
+++ b/less/pages.less
@@ -273,6 +273,10 @@ body { background: @body-bg; }
 	    }
 	}
 	.p01, .p02 { padding-left: 10px; background-color: #fff; }
+	.phone-panel {
+		.line { padding-left: 10px; background-color: #fff; }
+		.button-sty01 { margin-left: 5%; margin-top: 20px; }
+	}
 	.p02 {
 		.line:last-child { text-align: center;
 		    > a { display: inline-block; padding: 0 10px; height: 100%;
