手机验证等

--- a/Views/Merchant/index.html
+++ b/Views/Merchant/index.html
@@ -43,7 +43,7 @@
                     <li>
                         <a href="orderList.html?orderCode=waitReceive">
                             <em id="deliveringCount">0</em>
-                            <span>待收货订单</span>
+                            <span>在途订单</span>
                         </a>
                     </li>
                     <li>
@@ -56,14 +56,14 @@
                     <li>
                         <a href="orderList.html?orderCode=closed">
                             <em id="closedCount">0</em>
-                            <span>已完成订单</span>
+                            <span>今日已完成</span>
                         </a>
                         <div class="line"></div>
                     </li>
                     <li>
                         <a href="orderList.html?orderCode=all">
                             <em id="totalCount">0</em>
-                            <span>所有订单</span>
+                            <span>今日订单</span>
                         </a>
                         <div class="line"></div>
                     </li>
