--- a/Views/User/waitComment.html
+++ b/Views/User/waitComment.html
@@ -54,7 +54,7 @@
     <script src="../../js/common.js"></script>
     <script src="../../js/pages.js?v=2017020201"></script>
     <script>
-        toGetOrder(6);
+        toGetOrder('6,7');
     </script>
 </body>
 
