--- a/Views/User/waitReceive.html
+++ b/Views/User/waitReceive.html
@@ -40,7 +40,7 @@
     <script src="../../js/common.js"></script>
     <script src="../../js/pages.js?v=2017020201"></script>
     <script>
-        toGetOrder(5);
+        toGetOrder('3,5');
     </script>
 </body>
 
