--- a/less/modules/footer.less
+++ b/less/modules/footer.less
@@ -93,6 +93,6 @@
     }
 }
 
-.footer-sty07 { background-color: #fff;
+.footer-sty07 { background-color: #fff; text-align: center;
     > a { display: block; line-height: 50px; text-align: center; font-size: 14px; color: #666; }
 }
