--- a/less/modules/icons.less
+++ b/less/modules/icons.less
@@ -37,10 +37,14 @@
 .icon-off { background: url(../img/icon-off.png) no-repeat center; background-size: contain; }
 
 
-.icon-plane, .icon-comment, .icon-headset { display: block; width: 28px; height: 28px; border: 1px solid @base-color; border-radius: 4px; }
+.icon-plane, .icon-comment, .icon-headset { display: block; width: 28px; height: 28px; border: 1px solid @base-color; border-radius: 4px;
+	&.unable { border-color: @border-color; }
+}
 .icon-plane { background: url(../img/icon-plane.png) no-repeat center; background-size: 16px; }
 .icon-comment { background: url(../img/icon-comment.png) no-repeat center; background-size: 16px; }
-.icon-headset { background: url(../img/icon-headset.png) no-repeat center; background-size: 16px; }
+.icon-headset { background: url(../img/icon-headset.png) no-repeat center; background-size: 16px;
+	&.unable { background: url(../img/icon-headset-unable.png) no-repeat center; background-size: 16px; }
+}
 
 
 .icon-load { position: relative; display: inline-block; top: -3px; width: 24px; height: 24px; background: url(../img/icon-load.png) no-repeat center; background-size: contain; .loading-rotate; }
