--- a/less/modules/list.less
+++ b/less/modules/list.less
@@ -89,10 +89,11 @@
 
 
 // 待收货页面
-.list-sty05 { margin-bottom: 1px; background-color: #fff;
+.list-sty05 { margin-bottom: 4px; background-color: #fff;
 	> h3 { position: relative; padding-left: 34px; height: 30px; line-height: 30px; color: @font-darker-color; font-size: 14px;
 		// > img { position: absolute; top: 6px; left: 10px; width: 38px; height: 18px; }
 		> i { position: absolute; top: 5px; left: 10px; }
+		> b { position: absolute; top: 8px; margin-left: 10px; }
 	}
 	> p { padding-right: 10px; height: 30px; line-height: 30px; font-size: 14px; text-align: right; border-bottom: 1px solid @border-color;
 		> em { margin: 0 4px; color: @base-color-red; font-size: 12px;
