扫码半成品

--- a/less/modules/icons.less
+++ b/less/modules/icons.less
@@ -64,3 +64,5 @@
 
 
 .icon-shop { position: absolute; width: 20px; height: 20px; background: url(../img/icon-shop.png) no-repeat center; background-size: contain; }
+
+.icon-scan-code { background: url(../img/icon-scan-code.png) no-repeat center; background-size: contain; }
