--- a/Views/Merchant/orderList.html
+++ b/Views/Merchant/orderList.html
@@ -68,7 +68,7 @@
                 <li class="confirm">确认</li>
             </ul>
         </div>
-        <div class="modal modal-sty01" id="confirmDeliverModal" style="display: none;">
+        <div class="modal modal-sty01" id="confirmDeliverModal">
             <div class="modal-content">
                 <div>
                     <select id="expressCompanyNo">
@@ -80,7 +80,7 @@
                 </div>
                 <div>
                     <input class="left" id="expressNo" name="expressNo" type="text" placeholder="快递单号">
-                    <a href="javascript"></a>
+                    <a class="icon-scan-code" href="javascript:;" id="scanQRCode"></a>
                 </div>
             </div>
             <ul class="modal-footer clearfix">
@@ -98,6 +98,58 @@
             </ul>
         </div>
     </div>
+    <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+    <script>
+    var settings = {
+        // url: apiUrl + 'Wechat/jsapi/getsignature?url=http://api.guagua365.net/Views/merchant/orderList.html?orderCode=waitPaid',
+        url: apiUrl + 'Wechat/jsapi/getsignature?url=' + location.href,
+        type: 'GET',
+        dataType: 'json',
+        cache: false
+    };
+    $.ajax(settings).done(function(data) {
+        alert(data.appId);
+        alert(data.timestamp);
+        alert(data.nonceStr);
+        alert(data.signature);
+        wx.config({
+            debug: true,
+            appId: data.appId,
+            timestamp: data.timestamp,
+            nonceStr: data.nonceStr,
+            signature: data.signature,
+            jsApiList: [
+                'checkJsApi',
+                'chooseImage',
+                'previewImage',
+                'uploadImage',
+                'downloadImage',
+                'getNetworkType',
+                'openLocation',
+                'getLocation',
+                'hideOptionMenu',
+                'showOptionMenu',
+                'closeWindow',
+                'scanQRCode',
+                'hideMenuItems',
+                'showMenuItems',
+                'hideAllNonBaseMenuItem',
+                'showAllNonBaseMenuItem',
+            ]
+        });
+    });
+    wx.ready(function() {
+        document.querySelector('#scanQRCode').onclick = function() {
+            wx.scanQRCode({
+                needResult: 1,
+                desc: 'scanQRCode desc',
+                success: function(res) {
+                    alert(JSON.stringify(res));
+                }
+            });
+        };
+    })
+    </script>
     <script src="../../js/vendor.js?v=2017020201"></script>
     <script>
     $(function() {
