--- a/css/pages.css
+++ b/css/pages.css
@@ -574,6 +574,10 @@ div {
   background: url(../img/icon-shop.png) no-repeat center;
   background-size: contain;
 }
+.icon-scan-code {
+  background: url(../img/icon-scan-code.png) no-repeat center;
+  background-size: contain;
+}
 .modal {
   position: absolute;
   z-index: 2000;
@@ -632,8 +636,10 @@ div {
 }
 .modal-sty01 .modal-content > div > a {
   float: right;
-  margin-left: 8px;
-  width: 28px;
+  margin-top: 4px;
+  margin-right: 4px;
+  width: 20px;
+  height: 20px;
 }
 .modal-sty01 .modal-content > textarea {
   box-sizing: border-box;
