--- a/less/modules/modals.less
+++ b/less/modules/modals.less
@@ -9,7 +9,7 @@
 				&.left { float: left; width: calc(~"100% - 36px"); }
 			}
 			> select { box-sizing: border-box; padding: 0 18px 0 8px; width: 100%; height: 100%; border: none; color: #999; background: url('../img/icon-arrow-down.png') no-repeat center right; background-size: 14px 14px; }
-			> a { float: right; margin-left: 8px; width: 28px; }
+			> a { float: right; margin-top: 4px; margin-right: 4px; width: 20px; height: 20px; }
 		}
 		> textarea { box-sizing: border-box; padding: 8px; width: 100%; height: 200px; border: 1px solid @border-color; border-radius: 2px; resize: none; }
 	}
